--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body::-webkit-scrollbar {
 body::-webkit-scrollbar-track {
   /* color of the tracking area */
   border-radius: 10px;
-  background-color: #191d22;
+  background-color: #12151a;
 }
 
 body::-webkit-scrollbar-thumb {
@@ -20,12 +20,15 @@ body::-webkit-scrollbar-thumb {
   border: 1px solid #191d22;
   border-radius: 10px;
 }
-
-.home {
+.nav {
   display: flex;
-  width: 45%;
-  margin: 0 0 0 46%;
-  flex-direction: column;
+  flex-wrap: wrap;
+}
+.home {
+  display: block;
+  margin: 5vw auto 10vh auto;
+  width: 50%;
+
   background-color: #00000048;
 }
 .home img {
@@ -44,7 +47,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .home h1 {
-  font-size: 3.5vw;
+  font-size: 3vw;
   text-align: center;
   color: #dfdade;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -57,11 +60,13 @@ a {
 }
 
 .containerHeros {
-  margin: 1vh 0 0 36%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   grid-gap: 4vw;
+  width: 70%;
+  margin: 70px auto 0 auto;
+  padding: 60px 0;
 }
 .containerHeros img {
   display: block;
@@ -127,38 +132,35 @@ span {
 }
 
 .nav-container {
-  background-color: #00000048;
-  width: 35%;
-  height: 100vh;
+  background-color: #d72323;
+  width: 100%;
+
   position: fixed;
   z-index: 1;
   top: -0%;
-  display: grid;
-  grid-template-areas:
-    "nav"
-    "nav"
-    "nav"
-    "nav"
-    "Footer";
 }
 .nav-container header {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  padding-right: 10px;
+  width: 26%;
   font-size: 2vw;
-  text-align: center;
   font-weight: 600;
-  padding: 20px 0;
+
   color: #eeeeee;
   background-color: #d72323;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-
+.spidy {
+  width: 4%;
+  padding: 5px 0;
+}
 .personaje {
   background-color: #00000048;
-
-  width: 40%;
-  margin: 0 0 0 49%;
-
+  width: 50%;
+  margin: 90px auto 0 auto;
   color: #eeeeee;
-
   overflow: hidden;
 }
 
@@ -230,24 +232,28 @@ h4 {
 }
 
 .Container___form {
+  width: 25%;
   display: flex;
-  flex-direction: column;
-  width: 90%;
-  margin: 40px auto;
   justify-content: center;
+  align-items: center;
 }
 input,
 .resul {
-  width: 72%;
+  width: 70%;
   font-size: 1vw;
 
   padding: 0.3vw;
-  border: none;
   border-bottom: 1px solid #eeeeeeb6;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.164);
   margin-right: 0.5vw;
   color: #508bc7;
   padding-top: 0.9vw;
+}
+.resul {
+  position: fixed;
+  top: 7%;
+  right: 0;
+  width: 21%;
 }
 input::placeholder {
   color: #ffffffa6;
@@ -258,8 +264,7 @@ input::placeholder {
 .Container___form button {
   background-color: #d72323;
   border-radius: 7px;
-  width: 25%;
-  font-size: 1.2vw;
+  font-size: 16px;
   padding: 0.5vw 1vw;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   border-radius: 10px;
@@ -277,10 +282,11 @@ input::placeholder {
 @media only screen and (max-width: 800px) {
   .home {
     display: flex;
-    width: 63%;
-    margin: 0 0 0 36%;
+    width: 85%;
+    padding: 0 5px;
     flex-direction: column;
     background-color: #00000048;
+    margin-top: 25vw;
   }
   .home p {
     font-size: 16px;
@@ -291,9 +297,8 @@ input::placeholder {
     padding: 17px 0;
   }
   .personaje {
-    width: 60%;
-    margin: 0 0 0 37%;
-    background-color: #161c22;
+    width: 80%;
+    margin-top: 30vw;
   }
   .personaje .caratula p {
     width: 90%;
@@ -305,6 +310,13 @@ input::placeholder {
     font-size: 16px;
     line-height: 20px;
   }
+  .containerHeros {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    grid-gap: 4vw;
+    width: 90%;
+  }
   .containerHeros img {
     height: 130px;
   }
@@ -314,10 +326,11 @@ input::placeholder {
   }
   .hero h3 {
     font-size: 16px;
-
-    padding-top: 10px;
   }
-
+  .spidy {
+    width: 8%;
+    padding-top: 5px;
+  }
   .description span {
     font-size: 10px;
     height: 50%;
@@ -325,8 +338,26 @@ input::placeholder {
     padding-bottom: 3px;
     line-height: normal;
   }
+
   .nav-container header {
-    font-size: 5vw;
+    width: 65%;
+    font-size: 20px;
+    display: flex;
+    padding-top: 10px;
+  }
+
+  .Container___form {
+    grid-area: search;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .Container___form form {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 4px 0;
   }
   p,
   span,
@@ -343,19 +374,6 @@ input::placeholder {
     display: block;
     font-size: 1px;
   }
-  .Container___form button {
-    width: 8vw;
-    font-size: 10px;
-  }
-  input,
-  .resul {
-    width: 17vw;
-    font-size: 10px;
-
-    padding: 55px;
-
-    padding-top: 8px;
-  }
 }
 .resul {
   background-color: #d723239d;
@@ -369,15 +387,12 @@ a,
   font-size: 17px;
 }
 .navList {
-  background-color: rgba(0, 0, 0, 0.253);
   display: flex;
   flex-wrap: wrap;
-  width: 90%;
+  width: 45%;
   margin: auto;
   overflow: hidden;
-  margin-top: 1vw;
-  padding: 0.5vw 0;
-  border-bottom: #d72323 1px solid;
+  padding: 0.5vw 0vw;
   justify-content: center;
 }
 .navList span {
@@ -390,9 +405,7 @@ a,
 .navList span a:hover {
   color: #d72323;
 }
-.nav {
-  grid-area: nav;
-}
+
 .copyright {
   grid-area: Footer;
   display: flex;
@@ -420,7 +433,7 @@ a,
 .OneComics {
   background-color: #00000048;
   color: #eeeeee;
-  margin: 0 1% 0 43%;
+  margin: 100px auto 20px auto;
 
   display: grid;
   grid-template-areas:
@@ -481,21 +494,19 @@ a,
     font-size: 6vw;
   }
   .Container___form button {
-    width: 10vw;
+    width: 15%;
     font-size: 10px;
+    padding: 5px 0;
   }
   input,
   .resul {
-    width: 17vw;
+    width: 60%;
     font-size: 2vw;
-
     padding: 5px;
-
-    padding-top: 8px;
   }
   .OneComics {
-    width: 60%;
-    margin: 0 1% 0 38.5%;
+    width: 90%;
+    margin: 120px auto 20px auto;
     grid-template-areas:
       "HeaderComics "
       "detalles"
@@ -517,9 +528,15 @@ a,
     width: 80%;
     height: 40vh;
   }
+  .navList {
+    width: 100%;
+  }
+  .navList span a {
+    font-size: 14px;
+    margin-right: 5px;
+  }
 }
 .carga {
-  height: 100vh;
   width: 1350vh;
   position: relative;
   margin-left: 35%;
@@ -530,7 +547,6 @@ a,
 }
 .errormensaje {
   z-index: 1;
-  margin-left: 18%;
   position: fixed;
 
   top: 50%;
@@ -658,6 +674,66 @@ a,
   grid-area: events;
 }
 
+.footer-distributed {
+  background-color: #d72323;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: normal 16px sans-serif;
+  padding: 45px 50px;
+}
+
+.footer-distributed .footer-left p {
+  color: #8f9296;
+  font-size: 14px;
+  margin: 0;
+}
+
+.footer-distributed .footer-right {
+  float: right;
+  margin-top: 6px;
+  max-width: 180px;
+}
+
+.footer-distributed .footer-right a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  background-color: #33383b;
+  border-radius: 2px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+  margin-left: 3px;
+  transition: all 0.25s;
+}
+
+.footer-distributed .footer-right a:hover {
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+}
+
+.footer-distributed p.footer-links a:hover {
+  text-decoration: underline;
+}
+
+/* Media Queries */
+
+@media (max-width: 600px) {
+  .footer-distributed .footer-left,
+  .footer-distributed .footer-right {
+    text-align: center;
+  }
+  .footer-distributed .footer-right {
+    float: none;
+    margin: 0 auto 20px;
+  }
+  .footer-distributed .footer-left p.footer-links {
+    line-height: 1.8;
+  }
+}
 /*"supers supers  creators"
     "Stories Stories creators"
     "comics comics  creators"
