--- a/src/index.css
+++ b/src/index.css
@@ -6,22 +6,17 @@
 }
 
 .container__carga {
-  height: 100vh;
-  width: 1350vh;
+  height: 90vh;
+  width: 100%;
   position: relative;
-  margin-left: 35%;
-  position: fixed;
-  top: 0%;
-  left: 0%;
+  margin-top: 80px;
   background-color: rgba(0, 0, 0, 0.452);
-  z-index: 1;
 }
 
 svg {
   width: 20vh;
   height: 20vh;
   z-index: 1;
-  margin-left: 18%;
   position: fixed;
   background-color: #e2e2e200;
   top: 50%;
